--- a/main.html
+++ b/main.html
@@ -10,12 +10,19 @@
 </head>
 <body>
 <div class="main">
+<div class="ryu-container">
 <div class="ryu">
 <div class="hadouken"></div>
   <div class="ryu-still"></div>
   <div class="ryu-ready"></div>
   <div class="ryu-throwing"></div>
+   <div class="ryu-cool"></div>
 </div>
 </div>
+
+</div>
+
+
+<audio id="hadouken-sound" src="sound/hadouken.mp3">
 </body>
 </html>
