--- a/main.html
+++ b/main.html
@@ -4,12 +4,14 @@
 	<meta charset="UTF-8">
 	<title></title>
 	<link rel="stylesheet" href="css/reset.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </head>
 <body>
 <div class="main">
+
 <div class="ryu-container">
 <div class="ryu">
 <div class="hadouken"></div>
@@ -18,8 +20,12 @@
   <div class="ryu-throwing"></div>
    <div class="ryu-cool"></div>
 </div>
-</div>
 
+</div>
+<div class="how-to">
+				<p>Click on Ryu to make him throw a Hadouken.</p>
+				<p>Press and hold down the "x" key to make him strike his cool pose!</p> 
+			</div>
 </div>
 
 
